--- a/cadastro/cadastro.html
+++ b/cadastro/cadastro.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,11 +7,12 @@
     <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="../bootstrap/css/bootstrap-icons-1.5.0/bootstrap-icons.css">
     <link rel="stylesheet" href="../cadastro/cadastro.css">
+    
     <title>Cadastro</title>
 </head>
 <body>
     <header>
-        <a href="../menu/menu.html">
+        <a data-bs-toggle="offcanvas" href="#offcanvas" role="button" aria-controls="offcanvas">
             <i class="bi bi-list"></i>
         </a>
         Cadastro
@@ -36,6 +37,53 @@
             </button>
         </a>
     </div>
+
+    <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvas" aria-labelledby="offcanvasLabel">
+        <div class="offcanvas-header">
+            <header>
+                <div class="circle">L</div>
+                Lucas Mattos Amorim
+            </header>
+          <button type="button" class="btn-close btn-close-white text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+            <div class="content">
+                <a href="../dashboard/dashboard.html">
+                    <button>
+                        <div class="icon">
+                            <i class="bi bi-house-door"></i>
+                        </div>
+                        <span>Dashboard</span>
+                    </button>
+                </a>
+                <a href="../cadastro/cadastro.html">
+                    <button>
+                        <div class="icon">
+                            <i class="bi bi-person-fill"></i>
+                        </div>
+                        <span>Editar cadastro</span>
+                    </button>
+                </a>
+                <a href="../listaPeso/listaPeso.html">
+                    <button>
+                        <div class="icon">
+                            <i class="bi bi-pencil"></i>
+                        </div>
+                        <span>Editar pesos</span>
+                    </button>
+                </a>
+                <a href="../inicio.html">
+                    <button>
+                        <div class="icon">
+                            <i class="bi bi-door-open-fill"></i>
+                        </div>
+                        <span>Deslogar da conta</span>
+                    </button>
+                </a>
+            </div>
+        </div>
+    </div>
+
     <script src="../bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
