implementado modals para confirmações e edições das páginas principais

--- a/novaConta/novaConta.html
+++ b/novaConta/novaConta.html
@@ -20,7 +20,7 @@
                     <input class="field"type="text" placeholder="nome completo">
                     <input class="field"type="text" placeholder="e-mail">
                     <input class="field"type="text" placeholder="altura (m)">
-                    <a href="../novaConta/contaCriada.html" class="btn btn-secondary">
+                    <a data-bs-toggle="modal" data-bs-target="#staticBackdrop" class="btn btn-secondary">
                         Criar conta
                     </a>
                 </form>
@@ -30,6 +30,27 @@
                     <button>voltar</button>
                 </a>
             </div>
+        </div>
+    </div>
+    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-body">
+                <div class="alert alert-success" role="alert">
+                    <i class="bi bi-check-circle-fill"></i>
+               </div>
+                <div class="alert alert-success" role="alert">
+                     Conta criada com sucesso!
+                </div>
+            </div>
+            <div class="modal-footer">
+                <div class="buttons">
+                    <a href="../inicio.html">
+                        <button>ok</button>
+                    </a>
+                </div>
+            </div>
+          </div>
         </div>
     </div>
     <script src="../bootstrap/js/bootstrap.bundle.min.js"></script>
