--- a/cadastro/cadastro.html
+++ b/cadastro/cadastro.html
@@ -31,7 +31,7 @@
             </div>
         </div>
     
-        <a href="../cadastro/editarCadastro.html">
+        <a data-bs-toggle="modal" data-bs-target="#staticBackdrop1">
             <button>
                 Editar Cadastro
             </button>
@@ -81,6 +81,56 @@
                     </button>
                 </a>
             </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="staticBackdrop1" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-body">
+                <div class="item">
+                    <input type="text" placeholder="Lucas Mattos Amorim">
+                </div>
+                <div class="item">
+                    <input type="text" placeholder="amorim22lucas@gmail.com">
+                </div>
+                <div class="item">
+                    <input type="number" placeholder="1,83">
+                </div>
+            </div>
+            <div class="modal-footer">
+                <div class="buttons">
+                    <a data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
+                        <button>Editar</button>
+                    </a>
+                    <a href="../listaPeso/listaPeso.html">
+                        <button>Voltar</button>
+                    </a>
+                </div>
+            </div>
+          </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="staticBackdrop2" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-body">
+                <div class="alert alert-success" role="alert">
+                    <i class="bi bi-check-circle-fill"></i>
+               </div>
+                <div class="alert alert-success" role="alert">
+                     Cadastro editado com sucesso!
+                </div>
+            </div>
+            <div class="modal-footer">
+                <div class="buttons">
+                    <a href="../cadastro/cadastro.html">
+                        <button>ok</button>
+                    </a>
+                </div>
+            </div>
+          </div>
         </div>
     </div>
 
