--- a/listaPeso/listaPeso.html
+++ b/listaPeso/listaPeso.html
@@ -28,12 +28,12 @@
                 <span>06/01/2020</span>
                 <span>70 kg</span>
                 <div>
-                    <a href="../listaPeso/editarListaPeso.html">
+                    <a data-bs-toggle="modal" data-bs-target="#staticBackdrop1">
                         <button>
                             <i class="bi bi-pencil"></i>
                         </button>
                     </a>
-                    <a href="../listaPeso/deletarListaPeso.html">
+                    <a data-bs-toggle="modal" data-bs-target="#staticBackdrop3">
                         <button>
                             <i class="bi bi-trash-fill"></i>
                         </button>
@@ -44,12 +44,12 @@
                 <span>16/01/2020</span>
                 <span>68,5 kg</span>
                 <div>
-                    <a href="../listaPeso/editarListaPeso.html">
+                    <a data-bs-toggle="modal" data-bs-target="#staticBackdrop1">
                         <button>
                             <i class="bi bi-pencil"></i>
                         </button>
                     </a>
-                    <a href="../listaPeso/deletarListaPeso.html">
+                    <a data-bs-toggle="modal" data-bs-target="#staticBackdrop3">
                         <button>
                             <i class="bi bi-trash-fill"></i>
                         </button>
@@ -60,12 +60,12 @@
                 <span>03/02/2020</span>
                 <span>66 kg</span>
                 <div>
-                    <a href="../listaPeso/editarListaPeso.html">
+                    <a data-bs-toggle="modal" data-bs-target="#staticBackdrop1">
                         <button>
                             <i class="bi bi-pencil"></i>
                         </button>
                     </a>
-                    <a href="../listaPeso/deletarListaPeso.html">
+                    <a data-bs-toggle="modal" data-bs-target="#staticBackdrop3">
                         <button>
                             <i class="bi bi-trash-fill"></i>
                         </button>
@@ -73,7 +73,7 @@
                 </div>
             </div>
         </div>
-        <a href="../listaPeso/editarListaPeso.html">
+        <a data-bs-toggle="modal" data-bs-target="#staticBackdrop1">
             <button>
                 Adicionar Peso
             </button>
@@ -125,6 +125,102 @@
             </div>
         </div>
     </div>
+
+    <div class="modal fade" id="staticBackdrop1" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-body">
+                <div class="item">
+                    <input type="text" onfocus="(this.type='date')" onblur="(this.type='date')" placeholder="data">
+                </div>
+                <div class="item">
+                    <input type="number" placeholder="peso (kg)">
+                </div>
+            </div>
+            <div class="modal-footer">
+                <div class="buttons">
+                    <a data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
+                        <button>Editar</button>
+                    </a>
+                    <a href="../listaPeso/listaPeso.html">
+                        <button>Voltar</button>
+                    </a>
+                </div>
+            </div>
+          </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="staticBackdrop2" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-body">
+                <div class="alert alert-success" role="alert">
+                    <i class="bi bi-check-circle-fill"></i>
+               </div>
+                <div class="alert alert-success" role="alert">
+                     Peso editado com sucesso!
+                </div>
+            </div>
+            <div class="modal-footer">
+                <div class="buttons">
+                    <a href="../inicio.html">
+                        <button>ok</button>
+                    </a>
+                </div>
+            </div>
+          </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="staticBackdrop3" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-body">
+                <div class="alert alert-danger" role="alert">
+                    <i class="bi bi-trash-fill"></i>
+               </div>
+                <div class="alert alert-danger" role="alert">
+                     Tem certeza que deseja excluir?
+                </div>
+            </div>
+            <div class="modal-footer">
+                <div class="buttons">
+                    <a data-bs-toggle="modal" data-bs-target="#staticBackdrop4">
+                        <button>sim</button>
+                    </a>
+    
+                    <a href="../listaPeso/listaPeso.html">
+                        <button>não</button>
+                    </a>
+                </div>
+            </div>
+          </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="staticBackdrop4" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-body">
+                <div class="alert alert-success" role="alert">
+                    <i class="bi bi-check-circle-fill"></i>
+               </div>
+                <div class="alert alert-success" role="alert">
+                     Peso deletado com sucesso!
+                </div>
+            </div>
+            <div class="modal-footer">
+                <div class="buttons">
+                    <a href="../listaPeso/listaPeso.html">
+                        <button>ok</button>
+                    </a>
+                </div>
+            </div>
+          </div>
+        </div>
+    </div>
+
     <script src="../bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
