tive que concertar um erro de ancora na página de cadastro

--- a/cadastro/cadastro.html
+++ b/cadastro/cadastro.html
@@ -103,7 +103,7 @@
                     <a data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
                         <button>Editar</button>
                     </a>
-                    <a href="../listaPeso/listaPeso.html">
+                    <a href="../cadastro/cadastro.html">
                         <button>Voltar</button>
                     </a>
                 </div>
