tive que concertar um erro de ancora na página de pesos

--- a/listaPeso/listaPeso.html
+++ b/listaPeso/listaPeso.html
@@ -164,7 +164,7 @@
             </div>
             <div class="modal-footer">
                 <div class="buttons">
-                    <a href="../inicio.html">
+                    <a href="../listaPeso/listaPeso.html">
                         <button>ok</button>
                     </a>
                 </div>
